Replace new Double/Long/Integer by valueof